mType/tests/testFiles/annotation/error/unknown_annotation_on_function_error.mt
// MYT-108: unknown annotation on a top-level function must error.
// Confirms the typed usage validator fires for non-class functions too.

@NotDeclared
function doWork(): void {
    print("never");
}

doWork();
